# sparkdq

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  api_docs.html  examples.html  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: api_docs.doctree  environment.pickle  examples.doctree  index.doctree
.doctrees/api/: checks.doctree  core.doctree  engine.doctree  exceptions.doctree  management.doctree  plugin.doctree
.doctrees/built-in-checks/: count-checks.doctree  date-checks.doctree  null-checks.doctree  numeric-checks.doctree  timestamp-checks.doctree
.doctrees/built_in_checks/: aggregate.doctree  row_level.doctree
.doctrees/custom_checks/: introduction.doctree  plugin_architecture.doctree  separation_logic.doctree
.doctrees/getting_started/: applying_validation.doctree  built_in_checks.doctree  defining_checks.doctree  introduction.doctree  validation_dataframes.doctree  validation_lifecycle.doctree
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.md
.github/workflows/: ci.yaml  publish.yaml  test.yaml
_modules/: index.html
_modules/sparkdq/: exceptions.html
_sources/: examples.rst  index.rst
_sources/api/: exceptions.rst  plugin.rst
_sources/built-in-checks/: date-checks.rst  timestamp-checks.rst
_sources/built_in_checks/: row_level.rst
_sources/custom_checks/: plugin_architecture.rst
_sources/getting_started/: applying_validation.rst  built_in_checks.rst  defining_checks.rst  validation_dataframes.rst  validation_lifecycle.rst
api/: checks.html  core.html  engine.html  exceptions.html  management.html  plugin.html
built-in-checks/: count-checks.html  date-checks.html  null-checks.html  numeric-checks.html  timestamp-checks.html
built_in_checks/: aggregate.html  row_level.html
custom_checks/: introduction.html  plugin_architecture.html  separation_logic.html
custom_checks/implementation/: aggregate.html  row_level.html  structure.html
docs/source/: api_docs.rst  conf.py  index.rst
examples/: README.md
examples/basic-example/: dq_checks.yaml  nyc_taxi_validation_demo.ipynb
examples/data-quality-patterns/: data-quality-patterns.ipynb  dq_checks.yaml
getting_started/: applying_validation.html  built_in_checks.html  defining_checks.html  introduction.html  validation_dataframes.html  validation_lifecycle.html
sparkdq/: __init__.py  exceptions.py
sparkdq/checks/: __init__.py
sparkdq/core/: __init__.py  base_check.py  base_config.py  check_results.py  severity.py
sparkdq/engine/: __init__.py  base_engine.py  validation_summary.py
sparkdq/factory/: __init__.py  check_config_registry.py  check_factory.py
sparkdq/management/: __init__.py  check_set.py
sparkdq/plugin/: __init__.py  check_config_registry.py  check_factory.py
tests/: conftest.py
tests/end_to_end/: test_aggregate_checks_use_original_dataframe_e2e.py  test_integration_batch_engine.py  (+1 more)
(+335 files in other folders)
